<resources>
    <string name="app_name">MichaelClone</string>
    <string name="FuelingRecord">주유 기록</string>
    <string name="Confirm">완료</string>
    <string name="location">위치</string>
    <string name="change">변경</string>
    <string name="NearbyPlace">가까운 장소 기준</string>
    <string name="NoPlace">장소 없음</string>
    <string name="CumulativeLeakDistance">누적 주행 거리</string>
    <string name="distanceDriven">2,000</string>
    <string name="km">km</string>
    <string name="unitMoney">₩</string>
    <string name="L">L</string>
    <string name="FuelingAmount">주유금액</string>
    <string name="fullFuel">가득주유</string>
    <string name="partialFueling">부분주유</string>
    <string name="carWashCost">세차비</string>
    <string name="fuelVolume">주유량</string>
    <string name="fuelingRecordMemo">메모, 특이사항\n(250자 이내, 이모티콘 불가)</string>
    <string name="Confirm_2">확인</string>
    <string name="Cancel">취소</string>
    <string name="add_image">사진 추가</string>
    <string name="Photo_shoot">사진 촬영</string>
    <string name="Choose_photo">사진 선택</string>
    <string name="fueling_imageCount">0/5</string>

    <!--잠시 하드코딩해놓은 것 기능 구현하면 지울것-->
    <string name="location2">안암카공업사</string>
    <string name="location3">서울특별시 성북구 안암동3가</string>

    <!--정비/기타 기록-->
    <string name="maintenanceOtherRecord">정비/기타</string>
    <string name="maintenanceItems">정비 항목</string>
    <string name="otherItems">기타 항목</string>
    <string name="PleaseSelectAnItem">항목을 선택해 주세요</string>
    <string name="selectionConfirm">선택 완료</string>
    <string name="replaceEvery">마다 교체</string>
    <string name="selectionCount"> 개 항목</string>
    <string name="month">개월</string>
    <string name="split">|</string>
    <string name="MaintenanceItemSelectionRecommend">항목을 선택해 주세요</string>
    <string name="change_item">+ 항목 변경</string>
    <string name="maintenanceMode">정비모드</string>
    <string name="repairShop">정비소</string>
    <string name="selfMaintenance">자가정비</string>
    <string name="MtOt_ExpenditureAmount">지출금액</string>
    <string name="MtOt_memoCount">0/250</string>
    <!--정비/기타 기록-->


    <string name="AddNewItem">새 항목 추가</string>
    <string name="DistanceUnit">km</string>
    <!--정비 항목-->
    <string name="engineOil">엔진오일 및 오일필터</string>
    <string name="airconditionerFilter">에어컨필터(향균필터)</string>
    <string name="wiperBlade">와이퍼 블레이드</string>
    <string name="driveBelt">구동벨트</string>
    <string name="missionOil">미션 오일</string>
    <string name="Battery">배터리</string>
    <string name="WarrantyRepair">보증수리</string>
    <string name="brakeFluid">브레이크 오일</string>
    <string name="brakePadsAndDiscs">브레이크 패드 및 디스크</string>
    <string name="accidentRepair">사고수리</string>
    <string name="airCleanerFilter">에어클리너 필터</string>
    <string name="Coolant">엔진부동액(냉각수)</string>
    <string name="fuelFilter">연료필터</string>
    <string name="exteriorRepairRestoration">외장수리복원</string>
    <string name="generalRepair">일반수리</string>
    <string name="sparkPlug">점화플러그</string>
    <string name="timingBelt">타이밍 벨트</string>
    <string name="Tire">타이어</string>
    <string name="tirePosition">타이어 위치</string>
    <string name="tirePunctureRepair">타이어펑크수리</string>
    <string name="powerSteeringOil">파워스티어링 오일</string>
    <string name="wheelAlignman">휠 얼라인먼</string>
    <!--정비 항목-->

    <!--기타 항목-->
    <string name="highPass">하이패스</string>
    <string name="tollFee">톨게이트 비용</string>
    <string name="parkingFee">주차요금</string>
    <string name="carWash">세차</string>
    <string name="fuelAdditive">연료첨가제(불스원샷)</string>
    <string name="carInspection">자동차검사</string>
    <string name="vehicleSupplies">차량용품</string>
    <string name="outdoorProducts">실외용품</string>
    <string name="indoorProducts">실내용품</string>
    <string name="carInsurance">자동차 보험</string>
    <string name="blackBox">블랙박스</string>
    <string name="trafficFine">교통범칙금</string>
    <string name="automobileTax">자동차세</string>
    <string name="tinting">썬팅(틴팅)</string>
    <string name="sheetMetalPainting">판금도색</string>
    <string name="navigation">네비게이션</string>
    <string name="rearCamera">후방카메라</string>
    <string name="carAudio">카오디오</string>
    <!--기타 항목-->

    <!--기록 페이지-->
    <string name="HistoryPageFullTab">전체</string>
    <string name="HistoryPageMaintenanceOthers">정비/기타</string>
    <string name="TotalMoney">총₩</string>
    <string name="Accumulate">누적</string>
    <!--기록 페이지-->

    <!--단일 항목 선택 알림-->
    <string name="selectSingleItemToast">항목은 단일 입력만 가능합니다.</string>
    <string name="year">년</string>
    <string name="month2">월</string>
    <string name="totalExpenditure">총 지출</string>
    <!--단일 항목 선택 알림-->

    <!--달력-->
    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <!--달력-->

</resources>