<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fuel_ecomony"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:background="@drawable/mtot_memo_item_background">

            <TableRow>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_span="1"
                    android:gravity="right|top"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_fuel_ecomony" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_span="9"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/tv_MtOt_ItemTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|left"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/maintenanceMode"
                        android:textColor="@color/blackTransparent_60"
                        android:textColorHint="#000000" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/TransparencyBlack_20" />

                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_column="1"
                    android:layout_span="9"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="left|center_vertical"
                            android:padding="5dp"
                            android:text="@string/MtOt_ExpenditureAmount"
                            android:textColor="@color/blackTransparent_60"
                            android:textColorHint="#000000" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="right|center_vertical">

                                <EditText
                                    android:id="@+id/et_MtOt_ItemPrice"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="9.9"
                                    android:background="@null"
                                    android:gravity="right"
                                    android:maxLength="13"
                                    android:inputType="number"
                                    android:maxLines="1"
                                    android:padding="5dp"
                                    android:textColor="#000000"
                                    android:textColorHint="#33000000" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:layout_weight="0.1"
                                android:layout_gravity="center_vertical"
                                android:padding="5dp"
                                android:text="@string/unitMoney"
                                android:textColor="#4D000000" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/TransparencyBlack_20" />

                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_span="1"
                    android:gravity="top"
                    android:padding="10dp">
                    <TextView
                        android:id="@+id/tv_MtOtItemMemoCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/MtOt_memoCount"
                        android:textSize="@dimen/MtOt_ItemMemoCount"
                        android:textColor="#33000000"/>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_span="9"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical">

                        <EditText
                            android:id="@+id/et_MtOtItemMemo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:gravity="left|top"
                            android:hint="@string/fuelingRecordMemo"
                            android:maxLength="250"
                            android:scrollbars="vertical"
                            android:textColor="@color/black"
                            android:textColorHint="#33000000"
                            android:textSize="@dimen/MtOt_ItemMemo"/>
                    </LinearLayout>

                </LinearLayout>
            </TableRow>
        </TableLayout>

        <View
            android:id="@+id/View_maintenanceItemLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/TransparencyBlack_20" />

    </LinearLayout>

</LinearLayout>